--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
-  namespace: wanderlust
+  namespace: reactjs
   labels:
     app: frontend
 spec:
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: devidevops447/wanderlust-frontend-beta:v2.5
+          image: devidevops447/reactjs-frontend-beta:v2.5
           ports:
             - containerPort: 5173
 ---
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  namespace: wanderlust
+  namespace: reactjs
 spec:
   type: NodePort
   selector:
