--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
+FROM node:18-alpine AS build
+WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
 FROM nginx:alpine
-
-# Copy build output from previous stage to nginx html directory
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Expose port 80
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
-
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
