--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -1,36 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: laravel-deployment
   namespace: reactjs
   labels:
-    app: frontend
+    app: laravel
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: frontend
+      app: laravel
   template:
     metadata:
-      name: frontend
+      name: laravel
       labels:
-        app: frontend
+        app: laravel
     spec:
       containers:
-        - name: frontend
-          image: devidevops447/reactjs-frontend-beta:v10
+        - name: laravel
+          image: devidevops447/laravel-beta:v10
           ports:
             - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: laravel-service
   namespace: reactjs
 spec:
   type: NodePort
   selector:
-    app: frontend
+    app: laravel
   ports:
     - port: 80
       targetPort: 80
